# ai-child

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.local.yml
android/: README.md  (+1 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260520_0001_create_initial_db1a_tables.py  20260521_0002_add_parent_message_to_parent_policies.py  20260521_0003_add_child_names_to_parent_policies.py  20260523_0004_create_model_debug_traces.py  20260524_0005_add_parent_report_generation_status.py  20260525_0006_create_child_accounts_auth_sessions.py  20260530_0007_create_companion_objects.py  20260601_0008_add_visual_kind_to_companion.py
backend/app/: main.py
backend/app/api/: download_page.py  fox_assets.py  tts_media.py
backend/app/core/: config.py  logging.py  version.py
backend/app/data/: topic_seed_packs_v0_1.json
backend/app/db/: models.py  session.py
backend/app/domain/: agent_runtime.py  attachment.py  companion_object.py  enums.py  memory.py  model_debug_trace.py  model_types.py  parent_report.py  prompt.py  scene.py  time.py  tts.py
backend/app/middleware/: request_id.py
backend/app/prompts/: global_system_v0_1.txt  persona_little_fox_v0_1.txt
backend/app/repositories/: attachment_repository.py  auth_repository.py  companion_object_repository.py  companion_object_sql_repository.py  conversation_persistence_repository.py  memory_repository.py  memory_sql_repository.py  model_debug_trace_repository.py  (+3 more)
(+645 files in other folders)
