[project]
name = "child-ai-backend"
version = "0.1.0"
description = "Backend skeleton for the child AI growth agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
